# agentic-rag

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
data/corpus/: LICENSES.md  manifest.json
data/corpus/postgres/: arrays.md  backup-dump.md  continuous-archiving.md  datatype-json.md  (+32 more)
docs/: FAILURES.md  INTERVIEW-QA.md  LEARNING.md
eval/: cache_eval.py  gate.py  materialize.py  metrics.py  retrievers.py  run.py  schema.py  thresholds.yaml
eval/golden/: METHODOLOGY.md  golden.jsonl
eval/judge/: judge.py  rubric.md  runner.py
eval/results/: ANALYSIS.md  GENERATION_RESULTS.md  RESULTS.md  cache_20260706T093245+0000.json  cache_20260706T093721+0000.json  gen_20260706T083427+0000.json  gen_20260706T102647+0000.json  run_agentic_20260706T090052+0000.json  run_dense_20260706T074353+0000.json  run_hybrid_20260706T083937+0000.json  run_rerank-dense_20260706T084753+0000.json  run_rerank_20260706T084647+0000.json  run_sparse_20260706T083925+0000.json
migrations/: 001_schema.sql  002_fts.sql
scripts/: bootstrap_models.sh  fetch_corpus.py  verify_golden.py
src/rag/: cli.py  config.py  db.py  models.py  query.py
tests/: conftest.py  test_agent.py  test_cache.py  test_chunker.py  test_config.py  test_dense_retrieval.py  test_fusion.py  test_generation.py  test_golden_schema.py  test_healthz.py  test_ingest.py  test_judge_regression.py  test_judge_unit.py  test_materialize.py  test_metrics.py  test_migrations.py  test_query_api.py  test_rerank.py  test_sparse_retrieval.py
(+24 files in other folders)
