[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG with an eval-first harness: hybrid retrieval, cross-encoder reranking, agentic re-query, LLM-as-judge evals, CI eval gates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "psycopg[binary,pool]>=3.2",
    "redis>=5.2",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.scripts]
rag-migrate = "rag.db:main"
rag-ingest = "rag.cli:ingest_main"
rag-query = "rag.cli:query_main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "markdownify>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag", "eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "judge: hits the real local Ollama judge; auto-skips when Ollama is absent (e.g. CI)",
]
